# tiny-adventure-solana

program/programs/tiny-adventure/: Cargo.toml
